<resources>
    <string name="app_name">LC Project</string>
    <string name="skill_1">Skill 1:</string>
    <string name="skill_2">Skill 2:</string>
    <string name="skills">Skills:</string>
    <string name="skill_3">Skill 3:</string>
    <string name="blunt">Blunt</string>
    <string name="pierce">Pierce</string>
    <string name="save_sinner">Save Sinner</string>
    <string name="name">Name:</string>
    <string name="rarity">Rarity:</string>
    <string name="health">Health:</string>
    <string name="speed_low">Speed Low:</string>
    <string name="speed_high">Speed High:</string>
    <string name="resistances">Resistances:</string>
    <string name="slash">Slash</string>
    <string name="to_viewer">To Viewer</string>
    <string name="_4">4</string>
    <string name="_5">+5</string>
    <string name="amt_x1">Amt. x1</string>
    <string name="x3">x3</string>
    <string name="skill_32">Skill 3</string>
    <string name="_41">4</string>
    <string name="_51">+5</string>
    <string name="amt_x2">Amt. x2</string>
    <string name="x31">x3</string>
    <string name="skill_21">Skill 2</string>
    <string name="lcb_sinner_faust">LCB SInner Faust</string>
    <string name="_186">186</string>
    <string name="_2_4">2~4</string>
    <string name="resistances1">Resistances:</string>
    <string name="_52">+5</string>
    <string name="_42">4</string>
    <string name="skill_11">Skill 1</string>
    <string name="x32">x3</string>
    <string name="amt_x32">Amt. x3</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="sinner_view">Sinner View</string>
    <string name="return_button">Return</string>

    <string-array name="rarity_array">
        <item>0</item>
        <item>00</item>
        <item>000</item>
    </string-array>
    <string-array name="resistance_array">
        <item>Fatal [x2]</item>
        <item>Normal [x1]</item>
        <item>Ineff. [x0.5]</item>
    </string-array>
    <string-array name="sin_affinity_array">
        <item>Wrath</item>
        <item>Lust</item>
        <item>Sloth</item>
        <item>Gluttony</item>
        <item>Gloom</item>
        <item>Pride</item>
        <item>Envy</item>
    </string-array>
    <string-array name="attack_type_array">
        <item>Slash</item>
        <item>Blunt</item>
        <item>Pierce</item>
    </string-array>
    <string-array name="skill_copies_array">
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
</resources>